Put hint after question.
I have used the HTML element `details` because it generates an accordion starting with a triangle followed by the word "Details".

BTW: This is also the solution for using markdown hints together with rmarkdown hints! You need to write into the markdown document the text between the HTML tag <details>. see, e.g., https://www.w3schools.com/TAGS/tag_details.asp

You can even change the word "Details" for instance to "Hint". In this case you would need to write as normal text (markdown) into the document:

<displays>
<summary><strong>Hint</strong><summary>
</display>

Because of a special CSS in `learnr` documents displaying the triangle in `learnr` documents (not in most other documents), you would need to add a new CSS rule:

details > summary {
  display: list-item;
}

You could also provide changing text with open and closed accordions with the following CSS rule for example:

details > summary::before {
    content: '▶︎ Click here to show the solution:';
}

details[open] > summary::before {
  content: '︎▼ Click here to hide the solution:';
}

Then you would add in the R Markdown document:

<details>
   <summary>
      <strong>Show solution</strong>
   </summary>
</details>

I would suggest using the standard version with "Details" as it is the most flexible way, differentiating with the markdown learner hints (which nevertheless could be used) and is still self-explanatory.

--- a/03-model/07-lesson/03-07-lesson.Rmd
+++ b/03-model/07-lesson/03-07-lesson.Rmd
@@ -329,7 +329,8 @@ where $t$ is time, measured in weeks, and $temp$ is a binary variable indicating
 
 If you decide to keep the interaction term present in the second model, you are implicitly assuming that:
 
-*Hint:* An interaction term allows the two lines representing the amount of rot in each location to have different slopes.
+<details>An interaction term allows the two lines representing the amount of rot in each location to have different slopes.
+</details>
 
 ```{r letter-w}
 question("If you decide to keep the interaction term present in the second model, you are implicitly assuming that",
