To see the solution change div hint to details
add second bullet point for the second part of task description

--- a/03-model/07-lesson/03-07-lesson.Rmd
+++ b/03-model/07-lesson/03-07-lesson.Rmd
@@ -382,7 +382,8 @@ Interaction models are easy to visualize in the data space with **ggplot2** beca
 
 The dataset `mariokart` is already loaded in your workspace.
 
-- Use the `color` aesthetic and the `geom_smooth()` function to plot the interaction model between duration and condition in the data space. Make sure you set the `method` and `se` arguments of `geom_smooth()`.
+- Use the `color` aesthetic and the `geom_smooth()` function to plot the interaction model between duration and condition in the data space. 
+- Make sure you set the `method` and `se` arguments of `geom_smooth()`.
 
 ```{r ex4, exercise=TRUE}
 # interaction plot
@@ -391,9 +392,9 @@ ggplot(___, aes(___)) +
   geom_smooth(___)
 ```
 
-<div id="ex4-hint">
-**Hint:** Define groups using the color `aes`thetic in the ggplot call.
-</div>
+<details>
+Define groups using the color `aes`thetic in the ggplot call.
+</details>
 
 ```{r ex4-solution}
 # interaction plot
