--- a/03-model/07-lesson/03-07-lesson.Rmd
+++ b/03-model/07-lesson/03-07-lesson.Rmd
@@ -489,6 +489,14 @@ A mild version of Simpson's paradox can be observed in the MarioKart auction dat
 
 However, a simple linear regression model reveals the opposite: longer auctions are associated with lower final prices. The problem is that all other things are *not* equal. In this case, the new MarioKarts - which people pay a premium for - were mostly sold in one-day auctions, while a plurality of the used MarioKarts were sold in the standard seven-day auctions. 
 
+```{r mariokart-plot, echo=TRUE}
+slr <- ggplot(mariokart, aes(y = total_pr, x = duration)) + 
+  geom_point() + 
+  geom_smooth(method = "lm", se = FALSE)
+slr
+```
+
+
 Our simple linear regression model is misleading, in that it suggests a negative relationship between final auction price and duration. However, *for the used* MarioKarts, the relationship is positive.
 
 The object `slr` is already defined for you.
@@ -496,34 +504,22 @@ The object `slr` is already defined for you.
 - Fit a simple linear regression model for final auction price (`total_pr`) as a function of duration (`duration`).
 - Use `aes()` to add a color aesthetic that's mapped to the condition variable to the `slr` object, which is the plot shown below.
 
-```{r}
-slr <- ggplot(mariokart, aes(y = total_pr, x = duration)) + 
-  geom_point() + 
-  geom_smooth(method = "lm", se = 0)
-slr
-```
-
-
 ```{r ex5, exercise=TRUE}
-slr <- ggplot(mariokart, aes(y = total_pr, x = duration)) + 
-  geom_point() + 
-  geom_smooth(method = "lm", se = FALSE)
-
 # model with one slope
-
+___
 
 # plot with two slopes
 slr + aes(___)
 ```
 
 
-<div id="ex5-hint">
-**Hint:** You can add layers to an existing plot with `+`.
-</div>
+<details>
+You can add layers to an existing plot with `+`.
+</details>
 
 ```{r ex5-solution}
 # model with one slope
-lm(total_pr ~ duration, data = mariokart)
+lm(formula = total_pr ~ duration, data = mariokart)
 
 # plot with two slopes
 slr + aes(color = cond)
